# trajlens

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: audit_hub.py  run_tests.sh
src/trajlens/: __init__.py  __main__.py  cli.py  errors.py  logging.py
src/trajlens/checks/: __init__.py  engine.py  protocol.py  registry.py  semantic.py  statistical.py  structural.py  temporal.py  utils.py  video.py  welford.py
src/trajlens/model/: __init__.py  adapters.py  canonical.py  stats.py
src/trajlens/report/: __init__.py  html_report.py  json_report.py  sarif.py  terminal.py  trust_score.py
src/trajlens/sources/: __init__.py  bounds.py  handles.py  info.py  loader.py  paths.py  version.py
tests/fixtures/: builders.py  corpus_builders.py
tests/property/: test_canonical_model_properties.py  test_check_properties.py
tests/unit/: test_checks.py  test_cli.py  test_corpus_fixtures.py  test_fixture_builders.py  test_m6_checks.py  test_model_adapters.py  test_model_stats.py  test_renderers.py  test_scaffold.py  test_sources_bounds.py  test_sources_handles.py  test_sources_info.py  test_sources_loader.py  test_sources_loader_integration.py  test_sources_paths.py  test_sources_version.py  test_trust_score.py
