[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trajlens"
version = "0.1.0.dev0"
description = "The quality and synthesis layer for the open robot-learning data ecosystem."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "trajlens contributors" }]
keywords = ["robotics", "lerobot", "dataset", "linter", "validation", "huggingface"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Quality Assurance",
]

# Core dependencies — every one justified per 05 §7:
# pyarrow: the dataset format is Parquet; we use Arrow directly for control and memory
# av: frame-accurate video decode for drift/decode checks (ADR-005: no shelling to ffmpeg)
# pydantic: typed metadata parsing at trust boundaries (06 §3: validate before acting)
# typer: type-hint native CLI, clean help, testable (02 §4)
# structlog: structured logging with redaction support (05 §3)
# numpy: numerical checks (stats recomputation, timestamp math)
dependencies = [
    "pyarrow>=14.0,<19",
    "av>=12.0,<14",
    "pydantic>=2.5,<3",
    "typer>=0.12,<1",
    "structlog>=24.0,<26",
    "numpy>=1.26,<3",
]

[project.optional-dependencies]
# [hub] is optional — trajlens works fully on local datasets without it
hub = ["huggingface_hub>=0.23,<1"]
dev = [
    "pytest>=8.0,<9",
    "pytest-cov>=5.0,<7",
    "hypothesis>=6.100,<7",
    "mypy>=1.10,<2",
    "ruff>=0.4,<1",
    # needed at dev/test time to mock Hub resolution and run the opt-in
    # integration test (05 §7 lists huggingface_hub as part of the core set)
    "huggingface_hub>=0.23,<1",
    "pre-commit>=3.7,<4",
    "pip-audit>=2.7,<3",
    # types stubs
    "types-pyaudio",
]

[project.scripts]
trajlens = "trajlens.cli:app"

[project.urls]
Homepage = "https://github.com/yourusername/trajlens"
Repository = "https://github.com/yourusername/trajlens"
Issues = "https://github.com/yourusername/trajlens/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/trajlens"]

[tool.hatch.build.targets.sdist]
include = ["src/", "tests/", "README.md", "LICENSE", "CHANGELOG.md"]

# ── ruff ─────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "S",    # flake8-bandit (security)
    "T20",  # flake8-print (no print statements)
    "RUF",  # ruff-specific rules
]
ignore = [
    "S101",  # assert used in tests — acceptable in test files
    "B008",  # do not perform function calls in default args — typer requires this
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106"]  # asserts and hardcoded strings OK in tests

[tool.ruff.lint.isort]
known-first-party = ["trajlens"]

# ── mypy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
# Pydantic v2 plugin for accurate type checking of models
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
# av (PyAV) ships no stubs; ignore missing imports for it
module = ["av.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["huggingface_hub.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# pyarrow ships no py.typed marker; ignore missing imports for it
module = ["pyarrow.*"]
ignore_missing_imports = true

# ── pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "--cov=src/trajlens",
    "--cov-report=term-missing",
    "--cov-fail-under=85",
]
markers = [
    "integration: marks tests that hit real network (deselect with -m 'not integration')",
    "slow: marks tests that are computationally heavy",
]

[tool.coverage.run]
source = ["src/trajlens"]
omit = ["src/trajlens/synth/*"]  # synth is v0.3; not in scope for coverage gate now

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@overload",
]
